Attempt at fixing fixed elements on mobile, part 3

--- a/www/style-ultramodern.linux.css
+++ b/www/style-ultramodern.linux.css
@@ -2601,7 +2601,7 @@ div > .MJXc-display {
 
 @media only screen and (hover: none), only screen and (-moz-touch-enabled) {
 	#ui-elements-container {
-		height: 100%;
+		height: unset;
 	}
 	#ui-elements-container > * {
 		position: fixed;
